module/core/mod_interface/tests/inc/derive/micro_modules_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`, `reuse`
 --> tests/inc/derive/micro_modules_unknown_vis/mod.rs
  |
  |   not_vis mod mod_exposed;
  |   ^^^^^^^
